# pilot-sbdd

./: CODE_OF_CONDUCT.md  README.md  environment.yaml  pyproject.toml  tox.ini
e3mol/experiments/: diffmodel.py  flowmodel.py  guidance.py  hparams.py  losses.py  pdb_to_pdbqt.py  run_train.py  sa.py  trainer.py  utils.py
e3mol/experiments/callbacks/: __init__.py  ema.py
e3mol/experiments/configs/: diffusion_crossdocked.yaml  diffusion_kinodata.yaml  flow_crossdocked.yaml  flow_kinodata.yaml
e3mol/experiments/crossdocked/: README.md  process_data.py
e3mol/experiments/data/: chem_utils.py  datainfo.py  dataset.py  fragmentation.py  mol_vis.py  molecule.py  pl_utils.py  process_protein_ligand_data.py  smarts_aliases.py  stats.py  utils.py
e3mol/experiments/diffusion/: categorical.py  gaussian.py
e3mol/experiments/flow/: base.py  categorical.py  continuous.py
e3mol/experiments/inference/: ifp.py  utils.py
e3mol/experiments/kinodata/: README.md  process_data.py
e3mol/experiments/sampling/: analyze.py  evaluate_pose.py  generate_ligands_multi.py  geometry.py  inpaint_ligands_multi.py  interaction_recovery.py  ring_analysis.py  shape.py  strain.py  utils.py
e3mol/experiments/sampling/plif_utils/: analysis.py  file_prep.py  settings.py  system_prep.py
e3mol/experiments/sampling/walters/: reos.py  ring_systems.py
e3mol/forge/: core.py  data.py  transforms.py  utils.py
e3mol/modules/: convs.py  gnn.py  model.py  nn.py
plk3/: README.md  generate_molecules.ipynb
plk3/data/: fixed_context.sdf  ligand.sdf  protein.pdbqt
